<resources>
    <string name="app_name">Farmers Market</string>

    // Login Activity
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="postalCode">Postal Code:</string>

    <string name="clerkLoginBtn">Sign up as Clerk</string>
    <string name="customerLoginBtn">Sign up as Customer</string>
    <string name="cancelBtn">Cancel</string>
    <string name="productId">Product ID:</string>
    <string name="employeeId">Employee ID:</string>
    <string name="placeOrderBtn">Place Order</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="loginBtn">Login</string>
    <string name="listProductsHeader">Current Cart:</string>
    <string name="total">Total:</string>
    <string name="addToCart">Add to cart</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="currentQuantity">Current quantity:</string>
    <string name="newQuantity">New quantity:</string>
    <string name="listOrders">List Orders</string>
    <string name="listOrdersHeader">Orders:</string>
    <string name="noOrders">No orders found!</string>
    <string name="viewProducts">View Products</string>
    <string name="deliverBtn">Confirm delivery</string>
    <string name="cancelOrderBtn">Cancel Order</string>
    <string name="canceled">Canceled</string>
    <string name="onItsWay">Delivery confirmed!</string>
    <string name="itemDeliveredUserInfo">Item delivered</string>
    <!-- also check Status class -->

    <!-- Input Digits and Hints -->
    <string name="alphanumericDotUnderscoreDashHint">Only letters, digits, ., _ and - allowed</string>
    <string name="alphanumericDotUnderscoreDashDigits">0,1,2,3,4,5,6,7,8,9,QWERTYUIOPASDFGHJKLZXCVBNM,qwertzuiopasdfghjklyxcvbnm,.,_,-</string>
    <string name="alphanumericDotUnderscoreDashSpaceDigits">0,1,2,3,4,5,6,7,8,9,QWERTYUIOPASDFGHJKLZXCVBNM,qwertzuiopasdfghjklyxcvbnm, ,.,_,-</string>
    <string name="alphaDigits">qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="alphaSpaceDigits">qwertzuiopasdfghjklyxcvbnm QWERTYUIOPASDFGHJKLZXCVBNMó</string>
    <string name="alphanumericSpaceDigits">qwertzuiopasdfghjklyxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM012345689</string>
    <string name="alphaHint">Only letters allowed</string>
    <string name="amountPurchased">Amount purchased:</string>
    <string name="thumbnail">Thumbnail</string>

</resources>
